--- a/data/PythiaMB1muX.cfg
+++ b/data/PythiaMB1muX.cfg
@@ -23,8 +23,8 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
       'MSUB(13)=1     ! Min bias process',
       'MSUB(28)=1     ! Min bias process',
       'MSUB(53)=1     ! Min bias process',
-      'MSUB(68)=1     ! Min bias process'      
- 
+      'MSUB(68)=1     ! Min bias process',      
+      'MSUB(95)=1     ! Min bias process' 
     }
 
   }
@@ -32,6 +32,7 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 
 module genfilter = PythiaFilter
     {
+       untracked int32 ParticleID = 13
        untracked double MinMuonPt = 4.0
        untracked double MinEta = -2.4
        untracked double MaxEta = 2.4
