--- a/data/PythiaMB1muX.cfg
+++ b/data/PythiaMB1muX.cfg
@@ -33,7 +33,7 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 module genfilter = PythiaFilter
     {
        untracked int32 ParticleID = 13
-       untracked double MinMuonPt = 4.0
+       untracked double MinPt = 4.0
        untracked double MinEta = -2.4
        untracked double MaxEta = 2.4
     }
