select electrons in one octant in phi (simple selection)

--- a/data/PythiaWenu.cfg
+++ b/data/PythiaWenu.cfg
@@ -44,3 +44,11 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 
   }
 }
+
+module genfilter = PythiaFilter
+    {
+       untracked int32 ParticleID = 11
+       untracked double MinPt = 4.0
+       untracked double MinPhi = 0.
+       untracked double MaxPhi = 0.7854
+    }
