--- a/data/PythiaWenu.cfg
+++ b/data/PythiaWenu.cfg
@@ -49,6 +49,8 @@ module genfilter = PythiaFilter
     {
        untracked int32 ParticleID = 11
        untracked double MinPt = 4.0
-       untracked double MinPhi = 0.
-       untracked double MaxPhi = 0.7854
+       untracked double MinPhi = 0.17453
+       untracked double MaxPhi = 0.87266
+       untracked double MinEta = 0.
+       untracked double MaxEta = 1.479
     }
