--- a/data/PythiaWenu.cfg
+++ b/data/PythiaWenu.cfg
@@ -20,7 +20,7 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "MSUB(2)=1               !Incl W production",
         "MSTJ(41)=1              !switch off QED brehmsstrahlung",
         "MDME(190,1) = 0            !W decay into dbar u",
-        "MDME(191,10 = 0            !W decay into dbar c",
+        "MDME(191,1) = 0            !W decay into dbar c",
         "MDME(192,1) = 0            !W decay into dbar t",
         "MDME(193,1) = 0            !W decay into dbar tp",
         "MDME(194,1) = 0            !W decay into sbar u",
@@ -48,9 +48,10 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 module genfilter = PythiaFilter
     {
        untracked int32 ParticleID = 11
-       untracked double MinPt = 4.0
-       untracked double MinPhi = 0.17453
-       untracked double MaxPhi = 0.87266
+       untracked double MinPhi = 0.15708
+       untracked double MaxPhi = 0.89012
        untracked double MinEta = 0.
-       untracked double MaxEta = 1.479
+       untracked double MaxEta = 1.5
+       untracked int32 Status = 3
+       untracked int32 MotherID = 24
     }
