--- a/data/PythiaWenu.cfg
+++ b/data/PythiaWenu.cfg
@@ -48,6 +48,7 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 module genfilter = PythiaFilter
     {
        untracked int32 ParticleID = 11
+       untracked double MinPt = 25. 
        untracked double MinPhi = 0.15708
        untracked double MaxPhi = 0.89012
        untracked double MinEta = 0.
