--- a/data/PythiaEWK.cfg
+++ b/data/PythiaEWK.cfg
@@ -10,7 +10,8 @@ source = PythiaSource
     # This is a vector of ParameterSet names to be read, in this order
     vstring parameterSets = {
       "pythiaUESettings", 
-      "processParameters"
+      "processParameters",
+      "CSAParameters"
     }
 
 include "Configuration/Generator/data/PythiaUESettings.cfi"
@@ -77,6 +78,9 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "PMAS(25,1) = 160           ! Higgs mass"
 
     }
-
+    
+     vstring CSAParameters = {
+        'CSAMODE = 2            ! EWK soup'
+    }
   }
 }
