add CSA Parameter

--- a/data/PythiaQCDdijet.cfg
+++ b/data/PythiaQCDdijet.cfg
@@ -10,7 +10,8 @@ source = PythiaSource
     # This is a vector of ParameterSet names to be read, in this order
     vstring parameterSets = {
       "pythiaUESettings", 
-      "processParameters"
+      "processParameters",
+      "CSAParameters"
     }
 
 include "Configuration/Generator/data/PythiaUESettings.cfi"
@@ -24,6 +25,11 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 	'MSUB(53)=1           ! gg to qq',
         'MSTP(142)=2          ! xsection reweighting on'
     }
+
+ vstring CSAParameters = {
+        'CSAMODE = 1            ! QCD soup'
+    }
+
 
   }
 }
