add Z forcing to leptons

--- a/data/PythiaHLTSoup.cfg
+++ b/data/PythiaHLTSoup.cfg
@@ -20,9 +20,23 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         'MSEL=0                  !User defined processes',
         'MSUB(1)=1               !Incl Z0/gamma* production',
         'CKIN(1)=20.            !Min invariant mass',
+	'MDME(174,1)=0           !Z decay into d dbar',
+        'MDME(175,1)=0           !Z decay into u ubar',
+        'MDME(176,1)=0           !Z decay into s sbar',
+        'MDME(177,1)=0           !Z decay into c cbar',
+        'MDME(178,1)=0           !Z decay into b bbar',
+        'MDME(179,1)=0           !Z decay into t tbar',
+        'MDME(182,1)=1           !Z decay into e- e+',
+        'MDME(183,1)=0           !Z decay into nu_e nu_ebar',
+        'MDME(184,1)=1           !Z decay into mu- mu+',
+        'MDME(185,1)=0           !Z decay into nu_mu nu_mubar',
+        'MDME(186,1)=1           !Z decay into tau- tau+',
+        'MDME(187,1)=0           !Z decay into nu_tau nu_taubar',
         'MSUB(2)=1                !W production',
         'MSTP(142) = 2              !xsection rescaling on',
         'MSUB(11)=1           ! qq to qq',
+	'MSUB(12)=1           ! qq to qq',
+	'MSUB(13)=1           ! qq to qq',
         'MSUB(68)=1           ! gg to gg',
         'MSUB(28)=1           ! qg to qg',
 	'MSUB(53)=1           ! gg to qq',
@@ -39,3 +53,14 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 
   }
 }
+
+
+ module genfilter = HLTFilter {
+       untracked double MinPtElectron = 25. 
+       untracked double MaxEtaElectron = 2.4
+       untracked double MinPtMuon = 18. 
+       untracked double MaxEtaMuon = 2.0
+       untracked double MinPtTau = 100.
+       untracked double MaxEtaTau = 2.4
+       
+ }
