switch off z+jets by default

--- a/data/PythiaJets.cfg
+++ b/data/PythiaJets.cfg
@@ -22,8 +22,8 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         'MSUB(68)=1           ! gg to gg',
         'MSUB(28)=1           ! qg to qg',
 	'MSUB(53)=1           ! gg to qq',
-	'MSUB(14)=1           ! gamma+jet',
-	'MSUB(29)=1           ! gamma+jet',
+#	'MSUB(14)=1           ! gamma+jet',
+#	'MSUB(29)=1           ! gamma+jet',
 	'MSUB(15)=1           ! z+jet',
 	'MSUB(30)=1           ! z+jet',	
         'MDME(174,1)=0           !Z decay into d dbar',
@@ -43,7 +43,7 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 
     vstring CSAParameters = {
         'CSAMODE = 1            !  jets',
-	'GAMMAJRW = 1.          !  gamma+jet reweight factor',
+#	'GAMMAJRW = 1.          !  gamma+jet reweight factor',
 	'ZJRW = 1.          !  z+jet reweight factor'
     }
 
@@ -51,18 +51,18 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
   }
 }
 
-module zj_filter = PythiaFilterZJet{       
+module genfilter = PythiaFilterZJet{       
        untracked double MinZPt = 18.
        untracked double MaxZPt = 22.
        untracked double MaxMuonEta= 2.5      
   }
 
-module gj_filter = PythiaFilterGammaJet{      
-       untracked double MinPhotonPt = 18.
-       untracked double MaxPhotonPt = 22.
-       untracked double MinDeltaPhi = 170
-       untracked double MaxDeltaEta = 1.3
-       untracked double MinPhotonEtaForwardJet= 1.3
-       untracked double MaxPhotonEta= 2.8
-       untracked double PhotonSeedPt= 5.      
-  }
+#module gj_filter = PythiaFilterGammaJet{      
+#       untracked double MinPhotonPt = 18.
+#       untracked double MaxPhotonPt = 22.
+#       untracked double MinDeltaPhi = 170
+#       untracked double MaxDeltaEta = 1.3
+#       untracked double MinPhotonEtaForwardJet= 1.3
+#       untracked double MaxPhotonEta= 2.8
+#       untracked double PhotonSeedPt= 5.      
+#  }
