--- a/data/PythiaJets.cfg
+++ b/data/PythiaJets.cfg
@@ -19,6 +19,8 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
     vstring processParameters = {
         'MSEL=0               ! user control',
         'MSUB(11)=1           ! qq to qq',
+        'MSUB(12)=1           ! qqb to qqb,
+        'MSUB(13)=1           ! qqb to qqb,
         'MSUB(68)=1           ! gg to gg',
         'MSUB(28)=1           ! qg to qg',
 	'MSUB(53)=1           ! gg to qq',
