filter name change

--- a/data/PythiaHLTSoup.cfg
+++ b/data/PythiaHLTSoup.cfg
@@ -54,7 +54,7 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
 }
 
 
- module genfilter = HLTFilter {
+ module genfilter = PythiaHLTSoupFilter {
        untracked double MinPtElectron = 25. 
        untracked double MaxEtaElectron = 2.4
        untracked double MinPtMuon = 18. 
