--- a/data/PythiaWenu.cfg
+++ b/data/PythiaWenu.cfg
@@ -21,24 +21,17 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "MSTJ(41)=1              !switch off QED brehmsstrahlung",
         "MDME(190,1) = 0            !W decay into dbar u",
         "MDME(191,1) = 0            !W decay into dbar c",
-        "MDME(192,1) = 0            !W decay into dbar t",
-        "MDME(193,1) = 0            !W decay into dbar tp",
+        "MDME(192,1) = 0            !W decay into dbar t",       
         "MDME(194,1) = 0            !W decay into sbar u",
         "MDME(195,1) = 0            !W decay into sbar c",
-        "MDME(196,1) = 0            !W decay into sbar t",
-        "MDME(197,1) = 0            !W decay into sbar tp",
+        "MDME(196,1) = 0            !W decay into sbar t",       
         "MDME(198,1) = 0            !W decay into bbar u",
         "MDME(199,1) = 0            !W decay into bbar c",
-        "MDME(200,1) = 0            !W decay into bbar t",
-        "MDME(201,1) = 0            !W decay into bbar tp",
-        "MDME(202,1) = 0            !W decay into bpbar u",
-        "MDME(203,1) = 0            !W decay into bpbar c",
-        "MDME(204,1) = 0            !W decay into bpbar t",
+        "MDME(200,1) = 0            !W decay into bbar t",        
         "MDME(205,1) = 0            !W decay into bbar tp",
         "MDME(206,1) = 1            !W decay into e+ nu_e",
         "MDME(207,1) = 0            !W decay into mu+ nu_mu",
-        "MDME(208,1) = 0            !W decay into tau+ nu_tau",
-        "MDME(209,1) = 0            !W decay into tau'+ nup_tau"
+        "MDME(208,1) = 0            !W decay into tau+ nu_tau"      
 
     }
 
