fix quote problem for python

--- a/data/PythiaEWK.cfg
+++ b/data/PythiaEWK.cfg
@@ -35,24 +35,16 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "MSUB(2)=1               !Incl W production",
         "MDME(190,1) = 0            !W decay into dbar u",
         "MDME(191,1) = 0            !W decay into dbar c",
-        "MDME(192,1) = 0            !W decay into dbar t",
-        "MDME(193,1) = 0            !W decay into dbar tp",
+        "MDME(192,1) = 0            !W decay into dbar t",     
         "MDME(194,1) = 0            !W decay into sbar u",
         "MDME(195,1) = 0            !W decay into sbar c",
-        "MDME(196,1) = 0            !W decay into sbar t",
-        "MDME(197,1) = 0            !W decay into sbar tp",
+        "MDME(196,1) = 0            !W decay into sbar t",     
         "MDME(198,1) = 0            !W decay into bbar u",
         "MDME(199,1) = 0            !W decay into bbar c",
         "MDME(200,1) = 0            !W decay into bbar t",
-        "MDME(201,1) = 0            !W decay into bbar tp",
-        "MDME(202,1) = 0            !W decay into bpbar u",
-        "MDME(203,1) = 0            !W decay into bpbar c",
-        "MDME(204,1) = 0            !W decay into bpbar t",
-        "MDME(205,1) = 0            !W decay into bbar tp",
         "MDME(206,1) = 1            !W decay into e+ nu_e",
         "MDME(207,1) = 1            !W decay into mu+ nu_mu",
         "MDME(208,1) = 1            !W decay into tau+ nu_tau",
-        "MDME(209,1) = 0            !W decay into tau'+ nup_tau",
         "MSTP(142) = 2              !xsection rescaling on",
         "MSUB(102) = 1              ! ggH ",
         "MSUB(123) = 1              ! ZZ fusion to H",
@@ -74,7 +66,8 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "MDME(224,1) = 0            ! Higgs decay to gam gam",
         "MDME(225,1) = 0            ! Higgs decay to ZZ",
         "MDME(226,1) = 1            ! Higgs decay to WW",
-        "PMAS(25,1) = 165           ! Higgs mass"
+        "PMAS(25,1) = 165           ! Higgs mass",
+	"MSUB(25) = 1               ! WW process"
 
     }
     
