--- a/data/PythiaEWK.cfg
+++ b/data/PythiaEWK.cfg
@@ -72,7 +72,8 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
     }
     
      vstring CSAParameters = {
-        'CSAMODE = 2            ! EWK soup'
+        'CSAMODE = 2            ! EWK soup',
+	'WWRW  = 100                      '
     }
   }
 }
