add slepton production

--- a/data/PythiaExotics.cfg
+++ b/data/PythiaExotics.cfg
@@ -96,6 +96,20 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "MSUB(234) = 1             ! SUSY",
         "MSUB(235) = 1             ! SUSY",
         "MSUB(236) = 1             ! SUSY",
+	"MSUB(201) = 1             ! SUSY slepton pairs",
+        "MSUB(202) = 1             ! SUSY",
+        "MSUB(203) = 1             ! SUSY",
+        "MSUB(204) = 1             ! SUSY",
+        "MSUB(205) = 1             ! SUSY",
+        "MSUB(206) = 1             ! SUSY",
+        "MSUB(207) = 1             ! SUSY",
+        "MSUB(208) = 1             ! SUSY",
+        "MSUB(209) = 1             ! SUSY",
+        "MSUB(210) = 1             ! SUSY",
+        "MSUB(211) = 1             ! SUSY",
+        "MSUB(212) = 1             ! SUSY",
+        "MSUB(213) = 1             ! SUSY",
+        "MSUB(214) = 1             ! SUSY",	
 #        "IMSS(1) = 2               ! msugra",
 #        "RMSS(1) = 250             ! m1/2",
 #        "RMSS(8) = 60             ! m0",
