--- a/data/PythiaExotics.cfg
+++ b/data/PythiaExotics.cfg
@@ -22,6 +22,15 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
         "MSTP(44)=3                ! only zprime  ",      
         "MSTP(142) = 2             ! xsection rescaling on ",
         "PMAS(32,1) = 700          ! zprime mass " ,
+	"MSTP(6)=1                 ! excited quarks",
+        "MSUB(147)=1               !d* production",
+        "MSUB(148)=1               !u* production",
+        "PMAS(7,1)=2000.0          !d* mass",
+        "PMAS(8,1)=2000.0          !u* mass",
+        "PARU(155)=2000.0          !Lambda Scale equals q* mass",
+        "PARU(157)=1.0             !f=1   SM coupling",
+        "PARU(158)=1.0             !f'=1  SM coupling",
+        "PARU(159)=1.0             !f_s=1 SM coupling",
 	"MSUB(244) = 1             ! SUSY gluino-gluino",
         "MSUB(243) = 1             ! SUSY",
         "MSUB(258) = 1             ! SUSY squark-gluino",
@@ -143,8 +152,8 @@ include "Configuration/Generator/data/PythiaUESettings.cfi"
     
      vstring CSAParameters = {
         'CSAMODE = 5            ! Exotics soup   ',
-	'ZPRW  = 1              ! zprime weight  ',
-	'SUSYRW = 1             ! susy weight    '
+	'ZPRW  = 200              ! zprime weight  ',
+	'SUSYRW = 300             ! susy weight    '
     }
   }
 }
