--- a/data/PythiaTT.cfg
+++ b/data/PythiaTT.cfg
@@ -1,6 +1,7 @@
+untracked PSet maxEvents = {untracked int32 input = 0}
+
 source = PythiaSource 
 { 
-  untracked int32 maxEvents = 0
   untracked int32 pythiaPylistVerbosity = 0
   untracked bool pythiaHepMCVerbosity = false
   untracked int32 maxEventsToPrint = 0
