update for maxevent

--- a/test/testprod.cfg
+++ b/test/testprod.cfg
@@ -12,22 +12,25 @@ process PROD  =
       untracked uint32 sourceSeed = 123456789
       PSet moduleSeeds =
       {
-         untracked uint32 VtxSmeared = 987654321
-         untracked uint32 g4SimHits = 9876
+         untracked uint32 VtxSmeared = 98765432
+         untracked uint32 g4SimHits = 11
+         untracked uint32 mix = 12345
       }
    }
 
+
    include "Configuration/Generator/data/PythiaEWK.cfg"
    
-   replace PythiaSource.maxEvents = 500
+   replace maxEvents.input = 100
+
    replace PythiaSource.pythiaPylistVerbosity = 1
    replace PythiaSource.maxEventsToPrint = 1
-
+    
 
    # SIM + DIGI part
    #
 #   include "Configuration/Generator/test/FullSim.cfi"		
-  
+  include "Configuration/StandardSequences/data/VtxSmearedGauss.cff" 
 #    path p = {genfilter}
 
    # Event, etc. output
