--- a/data/w3jet_VBFHiggsTo2Tau_alpgen.cfg
+++ b/data/w3jet_VBFHiggsTo2Tau_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
 wjet_VBFHiggsTo2Taugen
-w3j_VBFHiggsTo2Tau
+w3jet_VBFHiggsTo2Tau
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
