--- a/data/w4jet_VBFHiggsTo2Tau_alpgen.cfg
+++ b/data/w4jet_VBFHiggsTo2Tau_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
 wjet_VBFHiggsTo2Taugen
-w4j_VBFHiggsTo2TauLJet
+w4jet_VBFHiggsTo2Tau
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
