adapt to new MM config, this time with correct version (V01-02-05)

--- a/data/w4jet_VBFHiggsTo2Tau_alpgen.cfg
+++ b/data/w4jet_VBFHiggsTo2Tau_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
 wjet_VBFHiggsTo2Taugen
-w4jet_VBFHiggsTo2Tau
+w4j_VBFHiggsTo2TauLJet
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
