fixing cfg files

--- a/data/w2jet_VBFHiggsToInv_alpgen.cfg
+++ b/data/w2jet_VBFHiggsToInv_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
-wjet_VBFHiggsToInvgen
-w2jet_VBFHiggsToInv
+wjet_2j_vbf_invgen
+w2j_WBFHinv
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
