--- a/data/w3jet_VBFHiggsToInv_alpgen.cfg
+++ b/data/w3jet_VBFHiggsToInv_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
-wjet_VBFHiggsToInvgen
-w3jet_VBFHiggsToInv
+wjet_3j_vbf_invgen
+w3j_WBFHinv
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
