--- a/data/z2jet_VBFHiggsToInv_alpgen.cfg
+++ b/data/z2jet_VBFHiggsToInv_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
-zjet_VBFHiggsToInvgen
-z2jet_VBFHiggsToInv
+zjet_2j_vbf_invgen
+z2j_WBFHinv
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
