--- a/data/z3jet_VBFHiggsToInv_alpgen.cfg
+++ b/data/z3jet_VBFHiggsToInv_alpgen.cfg
@@ -1,6 +1,6 @@
 alpgen
-zjet_VBFHiggsToInvgen
-z3jet_VBFHiggsToInv
+zjet_3j_vbf_invgen
+z3j_WBFHinv
 ih2       1
 ebeam  7000
 irapgap   0  ! tells phase space to force one fwd/ one bkwd jets
