This commit was manufactured by cvs2git to create tag 'Configuration- Generator-V01-02-10'.
Sprout from master 2008-03-28 07:03:31 UTC Rick Wilkinson <sha1-197b93d87bf2e1eb4349df76c6ec25fd8f1f348e@cern.ch> 'adding new py configs'
Cherrypick from master 2008-02-06 11:56:46 UTC Luca Lista <sha1-73801ca8ca16918e053d407e1ed9c2469728f170@cern.ch> 'added znn files by Marurizio Pierini':
    data/znn2j_100ptz300_alpgen.cfg
    data/znn3j_100ptz300_alpgen.cfg
    data/znn4j_100ptz300_alpgen.cfg
    data/znn5j_100ptz300_alpgen.cfg

--- a/data/znn4j_100ptz300_alpgen.cfg
+++ b/data/znn4j_100ptz300_alpgen.cfg
@@ -1,4 +1,4 @@
-Wealpgen
+alpgen
 zjet_100ptz300gen
 z4j_100ptz300
 njets 4
@@ -10,4 +10,4 @@ ptjmin 20
 etajmax 5
 drjmin 0.7
 izdecmode 4
-ilep 1
+ilep = 1
