--- a/data/znn5j_100ptz300_alpgen.cfg
+++ b/data/znn5j_100ptz300_alpgen.cfg
@@ -1,4 +1,4 @@
-cralpgen
+alpgen
 zjet_100ptz300gen
 z5j_100ptz300
 njets 5
@@ -10,4 +10,4 @@ ptjmin 20
 etajmax 5
 drjmin 0.7
 izdecmode 4
-ilep 1
+ilep = 1
