replaced include statements inside module definitions by using statements to facilitate python migration. Following files were changed:   Configuration/Generator/data/PythiaUESettings.cfi   GeneratorInterface/Pythia6Interface/data/pythiaDefault.cfi   GeneratorInterface/PyquenInterface/data/pyquenPythiaDefault.cfi   GeneratorInterface/HydjetInterface/data/hydjetSourceDefault.cfi All files including these files have been updated

--- a/data/PythiaTT.cfg
+++ b/data/PythiaTT.cfg
@@ -1,5 +1,7 @@
 untracked PSet maxEvents = {untracked int32 input = 0}
 
+include "Configuration/Generator/data/PythiaUESettings.cfi"
+
 source = PythiaSource 
 { 
   untracked int32 pythiaPylistVerbosity = 0
@@ -14,7 +16,7 @@ source = PythiaSource
       "processParameters"
     }
 
-include "Configuration/Generator/data/PythiaUESettings.cfi"
+    using pythiaUESettingsBlock
 
     vstring processParameters = {
         "MSEL=0                  !User defined processes",
