--- a/data/PythiaExotics.cfg
+++ b/data/PythiaExotics.cfg
@@ -1,3 +1,5 @@
+include "Configuration/Generator/data/PythiaUESettings.cfi"
+
 source = PythiaSource 
 { 
   untracked int32 maxEvents = 0
@@ -14,7 +16,7 @@ source = PythiaSource
       "CSAParameters"
     }
 
-include "Configuration/Generator/data/PythiaUESettings.cfi"
+    using pythiaUESettingsBlock
 
     vstring processParameters = {
         "MSEL=0                  !User defined processes ",
