--- a/data/PythiaSoftMuon.cfg
+++ b/data/PythiaSoftMuon.cfg
@@ -1,3 +1,5 @@
+include "Configuration/Generator/data/PythiaUESettings.cfi"
+
 source = PythiaSource 
 { 
   untracked int32 pythiaPylistVerbosity = 0
@@ -13,7 +15,7 @@ source = PythiaSource
       "CSAParameters"
     }
 
-include "Configuration/Generator/data/PythiaUESettings.cfi"
+    using pythiaUESettingsBlock
 
     vstring processParameters = {
         'MSEL=0                 !User defined processes',
