--- a/data/PythiaWenu.cfg
+++ b/data/PythiaWenu.cfg
@@ -1,5 +1,7 @@
 untracked PSet maxEvents = {untracked int32 input = 0}
 
+include "Configuration/Generator/data/PythiaUESettings.cfi"
+
 source = PythiaSource 
 { 
   untracked int32 pythiaPylistVerbosity = 0
@@ -14,7 +16,7 @@ source = PythiaSource
       "processParameters"
     }
 
-include "Configuration/Generator/data/PythiaUESettings.cfi"
+    using pythiaUESettingsBlock
 
     vstring processParameters = {
         "MSEL=0                  !User defined processes",
