--- a/data/cmsGen-bbbb0j_nomatching.cfg
+++ b/data/cmsGen-bbbb0j_nomatching.cfg
@@ -1,6 +1,6 @@
 alpgen
 4Qgen
-4b0jnomatch      ! string labeling the output files
+4b0jnomatch
 njets 0
 ihvy 5
 ihvy2 5
@@ -11,4 +11,3 @@ iqopt 1
 ptjmin  20 
 etajmax 5
 drjmin 0.7
-
