This commit was manufactured by cvs2git to create tag 'Configuration- Generator-V01-03-05'.
Sprout from master 2008-06-11 15:21:50 UTC Fabio Cossutti <sha1-3dce45789e317cc29a75783a879c7e618b062b82@cern.ch> 'Add E = 50 GeV pion gun for HCAL Validation'
Cherrypick from master 2008-03-05 15:42:12 UTC Roberto Chierici <sha1-04aa5abbaeeec76b8375d1799c24dfd3e998b528@cern.ch> 'CSA07 signals':
    data/cmsGen-bbbb0j_nomatching.cfg

--- a/data/cmsGen-bbbb0j_nomatching.cfg
+++ b/data/cmsGen-bbbb0j_nomatching.cfg
@@ -1,6 +1,6 @@
 alpgen
 4Qgen
-4b0jnomatch
+4b0jnomatch      ! string labeling the output files
 njets 0
 ihvy 5
 ihvy2 5
@@ -11,3 +11,4 @@ iqopt 1
 ptjmin  20 
 etajmax 5
 drjmin 0.7
+
